# RayTracing

./: CMakeLists.txt  blyat.ppm  doc.odt
include/: camera.h  canvas.h  color.h  computations.h  cone.h  constants.h  cube.h  cylinder.h  group.h  helper.h  intersection.h  light.h  mat.h  material.h  objParser.h  object.h  object_builder.h  pattern.h  plane.h  pointLight.h  primitives.h  ray.h  renderer.h  shape.h  sphere.h  transformations.h  triangle.h  vec3f.h  vec4.h  world.h
include/math/: random.h  ray.h  vec3f.h
include/objects/: light.h  material.h  object.h  object_builder.h  primitives.h  scene.h  scene_manager.h
include/renderer/: camera.h  renderer.h
scenes/: scene1.yaml
src/: blyat.ppm  camera.cpp  canvas.cpp  color.cpp  computations.cpp  cone.cpp  cube.cpp  cylinder.cpp  group.cpp  helper.cpp  intersection.cpp  light.cpp  main.cpp  mat.cpp  material.cpp  objParser.cpp  object.cpp  object_builder.cpp  pattern.cpp  plane.cpp  pointLight.cpp  primitives.cpp  ray.cpp  renderer.cpp  shape.cpp  sphere.cpp  transformations.cpp  triangle.cpp  vec3f.cpp  vec4.cpp  world.cpp
src/math/: color.cpp  random.cpp  ray.cpp  vec3f.cpp
src/objects/: light.cpp  material.cpp  object.cpp  object_builder.cpp  primitives.cpp  scene.cpp  scene_manager.cpp
src/renderer/: camera.cpp  renderer.cpp
